Last edits, added thanks for Hesby, updated and fixed some code, did a little work on Vindinium, added missing stylesheet and some pictures.

--- a/AboutMeRecolor.html
+++ b/AboutMeRecolor.html
@@ -12,11 +12,13 @@
 	           <li><a href="ComputerHardware.html">Computer Hardware</a></li> 
 	           <li><a href="AboutMeRecolor.html">About Me</a></li> 
                <li><a href="Projects.html"> Projects</a></li>
-                <li><a href="Vindinium.html">Vindinium</a></li>
+               <li><a href="Vindinium.html">Vindinium</a></li>
+               <li><a href="thanks.html">Thank You!</a></li>
             </ul> 
         </div>
         <div id="mainbody">
             <h1>About Me</h1> 
+            <div><img src="CollegeMaja.jpg" id="image"></div>
             <p class="intro">My name is Maja Watte. I am a ninth grader attending Everest Public High School. My favorite subject is Science, and my favorite color is blue. I have a multitude of animals at my house; two cats, two dogs, four chickens, and some fish, to be specific. I live in Redwood City, and my favorite place to go (other than my house) is the library...or a candy store. </p>
             <div class="green">
               <div class="container">
