--- a/TextBasedGame.html
+++ b/TextBasedGame.html
@@ -13,7 +13,8 @@
             <p>Hello, and welcome to this text-based adventure!</p>
             <p>Be sure to answer very specifically. When you are prevented with a choice, enter your choice as it is written, or the game will not work. When you want to begin the game, submit 'START'. Have fun!</p>
             <p>P.S. The choices are provided in all caps. Don't say anything besides one of the choices you have, or the game may not work properly(it will route you to a different path if you get it right, or just give you an error message.) The choices are mainly just a few words.</p>
-          <p>P.P.S. Click the links below the game to go to the devolopers' webpages! Have fun!</p>
+            <p>P.P.S. Click the links below the game to go to the devolopers' webpages! Have fun!</p>
+            <p>Edit: The links do not work, other than the first one. It will link you to the first developer's project page. Sorry for the inconveinience!</p>
         </div>
         <input id="userInput" />
         <div id="submit">Submit</div>
@@ -23,9 +24,9 @@
 	<!-- Put NavBar in this DIV -->
 	<div id="navbar">
 	   <ul> 
-	       <li><a href="http://f.smtcs.rocks/majaw/index.html">Dev1 - Maja</a></li> 
-         <li><a href="http://f.smtcs.rocks/nicob/index.html">Dev2 - Nico</a></li> 
-         <li><a href="http://f.smtcs.rocks/ashleyg/intro.html">Dev3 - Ashley</a></li> 
+	       <li><a href="Projects.html">Dev1 - Maja</a></li> 
+         <li><a href="">Dev2 - Nico</a></li> 
+         <li><a href="">Dev3 - Ashley</a></li> 
        </ul> 
 	</div>
 	
