--- a/Vindinium.html
+++ b/Vindinium.html
@@ -12,20 +12,27 @@
 	           <li><a href="ComputerHardware.html">Computer Hardware</a></li> 
 	           <li><a href="AboutMeRecolor.html">About Me</a></li> 
                <li><a href="Projects.html"> Projects</a></li>
-                <li><a href="Vindinium.html">Vindinium</a></li>
+               <li><a href="Vindinium.html">Vindinium</a></li>
+               <li><a href="thanks.html">Thank You!</a></li>
             </ul> 
         </div>
         <div id="mainbody">
             <h1>Vindinium AI Project</h1>
             <p>On this page I will be going over a variety of topics in order to give a deeper understanding of what the Vindinium project was about and what I did for it. First, I will write a short explanation on Artificial Intelligence, or AI. Then I will explain what Vindinium is and what I made for it.</p>
-            <h2>What is an AI?</h2>
-            <p></p>
-            <h2>What is Vindinium?</h2>
-            <p></p>
-            <h2>What Does My Bot Do?</h2>
-            <p></p>
+            <div class="purple">
+                <h2>What is an AI?</h2>
+                <p>An AI, otherwise known as an artificial intelligence, is </p>
+            </div>
+            <div class="green">
+                <h2>What is Vindinium?</h2>
+                <p></p>
+            </div>
+            <div class="red">
+                <h2>What Does My Bot Do?</h2>
+                <p></p>
+            </div>
         </div>
         <p>Created: Monday June 8, 2015</p>
-        <p>Last Updated: Tuesday June 9, 2015, 1:52 pm</p>
+        <p>Last Updated: Wednesday June 10, 2015, 1:52 pm</p>
     </body>
 </html>
