--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	            <li><a href="AboutMeRecolor.html">About Me</a></li> 
                 <li><a href="Projects.html"> Projects</a></li>
                 <li><a href="Vindinium.html">Vindinium</a></li>
+                <li><a href="thanks.html">Thank You!</a></li>
             </ul> 
         </div>
         <div id="mainbody">
@@ -29,13 +30,13 @@
                     <li class="blue" style="text-align:center">I was drawn by the prospect of <em><strong>robots!</strong></em></li>
                     <li class="red" style="text-align:center">I've always wanted to learn how to code, but never really got around to it.</li>
                 </ul>
-                <p>In this class, we are learning about coding, including how to code and what the elements of coding are. We will have made a website, (this one,) a video game, an AI, and by the time we have finished this class.
-                <p>On my webpage, you can find some description of HTML and CSS, a page about me, and information on Computer Hardware. And all of this was created with code from scratch. I can't really believe that I made all of it myself, you know? But anyways,</p>
+                <p>In this class, we are learning about coding, including how to code and what the elements of coding are. We will have made a website, (this one,) a video game, and an AI by the time we have finished this class.
+                <p>On my webpage, you can find some description of HTML and CSS, a page about me, and information on Computer Hardware, as well as all of the projects which I have created. And all of this was created with code from scratch. I can't really believe that I made all of it myself, you know? But anyways,</p>
                 <h3>I hope you enjoy your visit!</h3>
                 <h4>Thank you for coming.</h4>
             </div>
         </div>
         <p>Created: Monday October 20, 2014</p>
-        <p>Last Updated: Tuesday June 9, 2015, 1:52 pm</p>
+        <p>Last Updated: Wednesday June 10, 2015, 9:40 am</p>
     </body>
 </html>	
