--- a/ComputerHardware.html
+++ b/ComputerHardware.html
@@ -13,6 +13,7 @@
 	           <li><a href="AboutMeRecolor.html">About Me</a></li> 
                <li><a href="Projects.html"> Projects</a></li>
                 <li><a href="Vindinium.html">Vindinium</a></li>
+               <li><a href="thanks.html">Thank You!</a></li>
             </ul> 
         </div>
         <div id="mainbody">
