--- a/index(Drop).html
+++ b/index(Drop).html
@@ -16,14 +16,14 @@ h3 {
   </style>
 </head>
 <body>
-  <a href="http://f.smtcs.rocks/majaw/Projects.html"><--Back to Projects></a>
+  <a href="Projects.html"><--Back to Projects></a>
     <h2>Drop Down Calculator</h2>
 <input type="text" name="Number1" style="width:50px;" id="Number1">
 <select id="DropdownMenu1">
     <option value="+">+</option>
     <option value="-">-</option>
-    <option value="x">×</option>
-    <option value="÷">÷</option>
+    <option value="x">x</option>
+    <option value="/">/</option>
     <option value="^">^</option>
     <option value="%">%</option>
 </select>
@@ -41,5 +41,5 @@ h3 {
 <p> / : divided by</p>
 <p> ^ : to the power of</p>
 <p> % : percent of</p>
-<script src="calc.js"></script>
+<script src="DropDownCalculator.js"></script>
 </body>  
